Team city 2025.03 update (#7)